update .gitignore file

--- a/consumer/.gitignore
+++ b/consumer/.gitignore
@@ -3,8 +3,14 @@
 # Java class files
 *.class
 
-.settings/
+/.settings/
 
 # Eclipse project files
-.classpath
-.project
+/.classpath
+/.project
+
+# logs
+/stacktrace.log
+/logs
+*.log
+*.log.*
