--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.ricky.dubbo</groupId>
 	<artifactId>consumer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>consumer</name>
@@ -28,8 +28,8 @@
 
 		<dependency>
 			<groupId>com.ricky.dubbo</groupId>
-			<artifactId>demo</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>api</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 
 		<dependency>
