--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -13,6 +13,7 @@
 	<properties>
 		<!-- 在阿里巴巴内部广泛使用的GA版本为：2.4.9，强烈推荐此版本 -->
 		<dubbo.version>2.5.3</dubbo.version>
+		<spring.version>4.2.7.RELEASE</spring.version>
 		<java.version>1.8</java.version>
 		<maven.compiler.version>3.1</maven.compiler.version>
 		<junit.version>4.12</junit.version>
@@ -31,7 +32,18 @@
 			<artifactId>api</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-
+		
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
