--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -2,70 +2,55 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ricky.dubbo</groupId>
-	<artifactId>provider</artifactId>
-	<version>1.0.0</version>
-	<packaging>jar</packaging>
+	<parent>
+		<groupId>com.ricky.codelab</groupId>
+		<artifactId>dubbo-samples</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
+	<artifactId>dubbo-provider</artifactId>
 
 	<name>provider</name>
 	<url>http://maven.apache.org</url>
-
-	<properties>
-		<!-- 在阿里巴巴内部广泛使用的GA版本为：2.4.9，强烈推荐此版本 -->
-		<dubbo.version>2.5.3</dubbo.version>
-		<spring.version>4.2.7.RELEASE</spring.version>
-		<java.version>1.8</java.version>
-		<maven.compiler.version>3.1</maven.compiler.version>
-		<junit.version>4.12</junit.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
-			<version>${dubbo.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.ricky.dubbo</groupId>
-			<artifactId>api</artifactId>
-			<version>1.0.0</version>
+			<groupId>com.ricky.codelab</groupId>
+			<artifactId>dubbo-api</artifactId>
 		</dependency>
 		
 		<dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
         </dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.sgroschupf</groupId>
+			<artifactId>zkclient</artifactId>
+		</dependency>
         
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compiler.version}</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<testSource>${java.version}</testSource>
-					<testTarget>${java.version}</testTarget>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
