--- a/dubbo-demo/dubbo-provider/pom.xml
+++ b/dubbo-demo/dubbo-provider/pom.xml
@@ -4,20 +4,17 @@
 
     <parent>
         <groupId>com.mindflow</groupId>
-        <artifactId>rpc-framework-tutorials</artifactId>
+        <artifactId>dubbo-demo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>demo-api</artifactId>
+    <artifactId>dubbo-provider</artifactId>
 
-    <name>demo-api</name>
+    <name>dubbo-provider</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
+
     </dependencies>
 
 </project>
