--- a/motan-demo/motan-consumer/pom.xml
+++ b/motan-demo/motan-consumer/pom.xml
@@ -1,23 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
+        <artifactId>motan-demo</artifactId>
         <groupId>com.mindflow</groupId>
-        <artifactId>rpc-framework-tutorials</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-api</artifactId>
+    <artifactId>motan-consumer</artifactId>
+    <packaging>jar</packaging>
 
-    <name>demo-api</name>
+    <name>motan-consumer</name>
     <url>http://maven.apache.org</url>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-    </dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
+    <dependencies>
+
+    </dependencies>
 </project>
