--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,14 @@
         <module>demo-api</module>
         <module>dubbo-demo</module>
         <module>motan-demo</module>
+        <module>dubbox-demo</module>
     </modules>
 
     <properties>
         <motan.version>0.3.0</motan.version>
         <!-- 在阿里巴巴内部广泛使用的GA版本为：2.4.9，强烈推荐此版本 -->
         <dubbo.version>2.5.3</dubbo.version>
+        <dubbox.version>2.8.4</dubbox.version>
         <spring.version>4.3.6.RELEASE</spring.version>
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
