--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>dubbo-demo</module>
         <module>dubbox-demo</module>
         <module>motan-demo</module>
+        <module>grpc-demo</module>
     </modules>
 
     <properties>
