--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </modules>
 
     <properties>
+        <grpc.version>1.4.0</grpc.version>
         <motan.version>0.3.0</motan.version>
         <!-- 在阿里巴巴内部广泛使用的GA版本为：2.4.9，强烈推荐此版本 -->
         <dubbo.version>2.5.3</dubbo.version>
