--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
     <modules>
         <module>demo-api</module>
         <module>dubbo-demo</module>
-        <module>dubbox-demo</module>
+        <!--<module>dubbox-demo</module>-->
         <module>motan-demo</module>
         <module>grpc-demo</module>
     </modules>
 
     <properties>
-        <grpc.version>1.4.0</grpc.version>
+        <grpc.version>1.7.0</grpc.version>
         <motan.version>0.3.0</motan.version>
         <dubbo.version>2.5.6</dubbo.version>
         <dubbox.version>2.8.3</dubbox.version>
