Update gRPC demo

--- a/grpc-demo/pom.xml
+++ b/grpc-demo/pom.xml
@@ -8,15 +8,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>grpc-demo</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>grpc-demo</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>grpc-demo-provider</module>
-        <module>grpc-demo-consumer</module>
-    </modules>
-
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -38,4 +34,34 @@
             <version>${grpc.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.5.0.Final</version>
+            </extension>
+        </extensions>
+        <plugins>
+            <plugin>
+                <groupId>org.xolstice.maven.plugins</groupId>
+                <artifactId>protobuf-maven-plugin</artifactId>
+                <version>0.5.0</version>
+                <configuration>
+                    <protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
+                    <pluginId>grpc-java</pluginId>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.7.0:exe:${os.detected.classifier}</pluginArtifact>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>compile-custom</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
