--- a/motan-demo/motan-consumer/pom.xml
+++ b/motan-demo/motan-consumer/pom.xml
@@ -10,14 +10,7 @@
     <artifactId>motan-consumer</artifactId>
     <packaging>jar</packaging>
 
-    <name>motan-consumer</name>
+    <name>${project.artifactId}</name>
     <url>http://maven.apache.org</url>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
-    <dependencies>
-
-    </dependencies>
 </project>
