--- a/dubbo-demo/pom.xml
+++ b/dubbo-demo/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
